--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -2,12 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import cv2"
+    "import cv2\n",
+    "import random\n",
+    "import numpy as np\n",
+    "from albumentations import HorizontalFlip, Rotate"
    ]
   },
   {
@@ -16,6 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 分割 T1 T2\n",
     "archive_path = '../input/train/'\n",
     "T2_path = '../input/T2Train/'\n",
     "T1_path = '../input/T1Train/'\n",
@@ -32,20 +36,271 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ramdom\n",
-    "import numpy as np\n",
-    "\n",
-    "def seed_torch(seed=42):\n",
+    "def seed(seed=42):\n",
     "    random.seed(seed)\n",
     "    os.environ['PYTHONHASHSEED'] = str(seed)\n",
     "    np.random.seed(seed)\n",
-    "    torch.manual_seed(seed)\n",
-    "    torch.cuda.manual_seed(seed)\n",
-    "    torch.backends.cudnn.deterministic = True"
+    "\n",
+    "seed()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_path = '../input/train/'\n",
+    "t1_path = '../input/T1Train/'\n",
+    "t2_path = '../input/T2Train/'\n",
+    "t1_dst_path = '../input/T1TrainSameSize/'\n",
+    "t2_dst_path = '../input/T2TrainSameSize/'\n",
+    "path_lst = [t1_path, t2_path]\n",
+    "dst_path_lst = [t1_dst_path, t2_dst_path]\n",
+    "\n",
+    "dirs = ['yes/', 'no/']\n",
+    "for i in range(len(path_lst)):\n",
+    "    path = path_lst[i]\n",
+    "    dst_path = dst_path_lst[i]\n",
+    "    for dir in dirs:\n",
+    "        num_all = len(os.listdir(all_path + dir))\n",
+    "        num = len(os.listdir(path + dir))\n",
+    "        lst = []\n",
+    "        for filename in os.listdir(path + dir):\n",
+    "            lst.append(filename)\n",
+    "            img = cv2.imread(path + dir + filename, cv2.IMREAD_COLOR)\n",
+    "            cv2.imwrite(dst_path + dir + filename, img)\n",
+    "        lst = np.array(lst)\n",
+    "        np.random.shuffle(lst)\n",
+    "\n",
+    "        flag = False\n",
+    "        for type in ['h_', 'r10_', 'r20_', 'r30_']:\n",
+    "            if flag:\n",
+    "                break\n",
+    "            \n",
+    "            for j in range(num):\n",
+    "                if len(os.listdir(dst_path + dir)) == num_all:\n",
+    "                    flag = True\n",
+    "                    break\n",
+    "                filename = lst[j]\n",
+    "                img = cv2.imread(path + dir + filename, cv2.IMREAD_COLOR)\n",
+    "                if type == 'h_':\n",
+    "                    image = HorizontalFlip(p=1)(image=img)['image']\n",
+    "                elif type == 'r10_':\n",
+    "                    image = Rotate(p=1)(image=img, limit=(10, 11), border_mode=cv2.BORDER_CONSTANT, value=0)['image']\n",
+    "                elif type == 'r20_':\n",
+    "                    image = Rotate(p=1)(image=img, limit=(20, 21), border_mode=cv2.BORDER_CONSTANT, value=0)['image']\n",
+    "                elif type == 'r30_':\n",
+    "                    image = Rotate(p=1)(image=img, limit=(30, 31), border_mode=cv2.BORDER_CONSTANT, value=0)['image']\n",
+    "                cv2.imwrite(dst_path + dir + type + filename, image)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import StratifiedKFold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CFG:\n",
+    "    n_fold = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fold\n",
+       "0    58\n",
+       "1    57\n",
+       "2    56\n",
+       "3    56\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>filename</th>\n",
+       "      <th>label</th>\n",
+       "      <th>T1</th>\n",
+       "      <th>fold</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Y1.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Y10.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Y101.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Y103.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Y104.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>222</th>\n",
+       "      <td>No12.jpg</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>223</th>\n",
+       "      <td>No14.jpg</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>224</th>\n",
+       "      <td>No15.jpg</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>225</th>\n",
+       "      <td>No21.jpg</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>226</th>\n",
+       "      <td>No22.jpg</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>227 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     filename  label  T1  fold\n",
+       "0      Y1.jpg      1   1     0\n",
+       "1     Y10.jpg      1   1     0\n",
+       "2    Y101.jpg      1   1     0\n",
+       "3    Y103.jpg      1   1     0\n",
+       "4    Y104.jpg      1   1     0\n",
+       "..        ...    ...  ..   ...\n",
+       "222  No12.jpg      0   0     3\n",
+       "223  No14.jpg      0   0     3\n",
+       "224  No15.jpg      0   0     3\n",
+       "225  No21.jpg      0   0     3\n",
+       "226  No22.jpg      0   0     3\n",
+       "\n",
+       "[227 rows x 4 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "T1_PATH = '../input/T1Train/'\n",
+    "T2_PATH = '../input/T2Train/'\n",
+    "\n",
+    "folds = {'filename': [], 'label': [], 'T1': []}\n",
+    "for filename in os.listdir(T1_PATH + 'yes/'):\n",
+    "  folds['filename'].append(filename)\n",
+    "  folds['label'].append(1)\n",
+    "  folds['T1'].append(1)\n",
+    "for filename in os.listdir(T1_PATH + 'no/'):\n",
+    "  folds['filename'].append(filename)\n",
+    "  folds['label'].append(0)\n",
+    "  folds['T1'].append(1)\n",
+    "for filename in os.listdir(T2_PATH + 'yes/'):\n",
+    "  folds['filename'].append(filename)\n",
+    "  folds['label'].append(1)\n",
+    "  folds['T1'].append(0)\n",
+    "for filename in os.listdir(T2_PATH + 'no/'):\n",
+    "  folds['filename'].append(filename)\n",
+    "  folds['label'].append(0)\n",
+    "  folds['T1'].append(0)\n",
+    "\n",
+    "folds = pd.DataFrame(folds)\n",
+    "Fold = StratifiedKFold(n_splits=CFG.n_fold)\n",
+    "for n, (train_index, val_index) in enumerate(Fold.split(folds, folds['label'])):\n",
+    "  folds.loc[val_index, 'fold'] = int(n)\n",
+    "folds['fold'] = folds['fold'].astype(int)\n",
+    "\n",
+    "display(folds.groupby('fold').size())\n",
+    "display(folds)\n",
+    "\n",
+    "folds.to_csv('../input/RealTrain/data.csv', index=False, sep=',')"
    ]
   }
  ],
