--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,9 +121,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T1_PATH = '../input/T1Train/'\n",
+    "T2_PATH = '../input/T2Train/'\n",
+    "\n",
+    "folds = {'filename': [], 'label': [], 'T1': []}\n",
+    "for filename in os.listdir(T1_PATH + 'yes/'):\n",
+    "  folds['filename'].append(filename)\n",
+    "  folds['label'].append(1)\n",
+    "  folds['T1'].append(1)\n",
+    "for filename in os.listdir(T1_PATH + 'no/'):\n",
+    "  folds['filename'].append(filename)\n",
+    "  folds['label'].append(0)\n",
+    "  folds['T1'].append(1)\n",
+    "for filename in os.listdir(T2_PATH + 'yes/'):\n",
+    "  folds['filename'].append(filename)\n",
+    "  folds['label'].append(1)\n",
+    "  folds['T1'].append(0)\n",
+    "for filename in os.listdir(T2_PATH + 'no/'):\n",
+    "  folds['filename'].append(filename)\n",
+    "  folds['label'].append(0)\n",
+    "  folds['T1'].append(0)\n",
+    "\n",
+    "folds = pd.DataFrame(folds)\n",
+    "Fold = StratifiedKFold(n_splits=CFG.n_fold)\n",
+    "for n, (train_index, val_index) in enumerate(Fold.split(folds, folds['label'])):\n",
+    "  folds.loc[val_index, 'fold'] = int(n)\n",
+    "folds['fold'] = folds['fold'].astype(int)\n",
+    "\n",
+    "display(folds.groupby('fold').size())\n",
+    "display(folds)\n",
+    "\n",
+    "folds.to_csv('../input/RealTrain/data.csv', index=False, sep=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 1 1 1 1 1 1 1 1 1 0 0 1 1 1 0 1 1 1 0 1 0 0 1 1 1 1 0 0 0 1 1 1 1 0 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 0 1 0 0 1 0 0 0 1 0 1 1 1 0 0 1 1 1 1 1 0 1 1 1 1 0 1\n",
+      " 1 0 1 1 1 1 1 1 0 1 0 1 0 0 1 1 1 1 1 0 1 1 0 1 1 1 1 1 1 1 1 0 1 1 0 0 1\n",
+      " 1 0 1 1 1 0 1 1 0 0 1 1 1 0 0 0 1 1 1 0 1 1 0 0 1 0 1 1 1 1 1 1 0 0 1 1 0\n",
+      " 1 1 0 1 1 0 1 1 1 1 0 0 0 1 1 1 1 1 1 1 0 0 1 1 1 1 0 1 1 0 1 0 1 0 0 1 1\n",
+      " 1 1 0 0 0 0 1 1 1 1 1 0 0 0 0 1 1 0 0 1 1 1 1 1 1 1 1 1 0 1 0 0 1 0 1 0 1\n",
+      " 1 1 1 0 1]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -212,21 +264,21 @@
        "      <th>222</th>\n",
        "      <td>No12.jpg</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>223</th>\n",
        "      <td>No14.jpg</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>224</th>\n",
        "      <td>No15.jpg</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -240,7 +292,7 @@
        "      <th>226</th>\n",
        "      <td>No22.jpg</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -256,11 +308,11 @@
        "3    Y103.jpg      1   1     0\n",
        "4    Y104.jpg      1   1     0\n",
        "..        ...    ...  ..   ...\n",
-       "222  No12.jpg      0   0     3\n",
-       "223  No14.jpg      0   0     3\n",
-       "224  No15.jpg      0   0     3\n",
+       "222  No12.jpg      0   1     3\n",
+       "223  No14.jpg      0   1     3\n",
+       "224  No15.jpg      0   1     3\n",
        "225  No21.jpg      0   0     3\n",
-       "226  No22.jpg      0   0     3\n",
+       "226  No22.jpg      0   1     3\n",
        "\n",
        "[227 rows x 4 columns]"
       ]
@@ -270,37 +322,20 @@
     }
    ],
    "source": [
-    "T1_PATH = '../input/T1Train/'\n",
-    "T2_PATH = '../input/T2Train/'\n",
     "\n",
-    "folds = {'filename': [], 'label': [], 'T1': []}\n",
-    "for filename in os.listdir(T1_PATH + 'yes/'):\n",
-    "  folds['filename'].append(filename)\n",
-    "  folds['label'].append(1)\n",
-    "  folds['T1'].append(1)\n",
-    "for filename in os.listdir(T1_PATH + 'no/'):\n",
-    "  folds['filename'].append(filename)\n",
-    "  folds['label'].append(0)\n",
-    "  folds['T1'].append(1)\n",
-    "for filename in os.listdir(T2_PATH + 'yes/'):\n",
-    "  folds['filename'].append(filename)\n",
-    "  folds['label'].append(1)\n",
-    "  folds['T1'].append(0)\n",
-    "for filename in os.listdir(T2_PATH + 'no/'):\n",
-    "  folds['filename'].append(filename)\n",
-    "  folds['label'].append(0)\n",
-    "  folds['T1'].append(0)\n",
+    "folds = pd.read_csv('../input/RealTrain/data.csv')\n",
+    "T1_idx = 2\n",
+    "T1 = folds['T1'].values\n",
     "\n",
-    "folds = pd.DataFrame(folds)\n",
-    "Fold = StratifiedKFold(n_splits=CFG.n_fold)\n",
-    "for n, (train_index, val_index) in enumerate(Fold.split(folds, folds['label'])):\n",
-    "  folds.loc[val_index, 'fold'] = int(n)\n",
-    "folds['fold'] = folds['fold'].astype(int)\n",
+    "np.random.seed(42)\n",
+    "np.random.shuffle(T1)\n",
+    "\n",
+    "folds['T1'] = T1\n",
     "\n",
     "display(folds.groupby('fold').size())\n",
     "display(folds)\n",
     "\n",
-    "folds.to_csv('../input/RealTrain/data.csv', index=False, sep=',')"
+    "folds.to_csv('../input/RealTrainRandom/data.csv', index=False, sep=',')"
    ]
   }
  ],
