--- a/use_t1_is_better.ipynb
+++ b/use_t1_is_better.ipynb
@@ -30,7 +30,17 @@
     "if not os.path.exists(OUTPUT_DIR):\n",
     "    os.makedirs(OUTPUT_DIR)\n",
     "\n",
-    "TRAIN_PATH = '../input/RealTrain/'"
+    "TRAIN_PATH = '../input/T2TrainSameSize/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = pd.read_csv(TRAIN_PATH + 'data.csv')\n",
+    "display(train.head())"
    ]
   },
   {
@@ -49,7 +59,7 @@
     "    model_name='resnext50_32x4d'\n",
     "    size=200\n",
     "    scheduler='CosineAnnealingLR' # ['ReduceLROnPlateau', 'CosineAnnealingLR', 'CosineAnnealingWarmRestarts']\n",
-    "    epochs=30\n",
+    "    epochs=10\n",
     "    #factor=0.2 # ReduceLROnPlateau\n",
     "    #patience=4 # ReduceLROnPlateau\n",
     "    #eps=1e-6 # ReduceLROnPlateau\n",
@@ -62,9 +72,11 @@
     "    weight_decay=1e-6\n",
     "    gradient_accumulation_steps=1\n",
     "    max_grad_norm=1000\n",
-    "    seed=42\n",
+    "    seed=43\n",
     "    target_size=1\n",
+    "    # target_cols=['label', 'T1']\n",
     "    target_cols=['label']\n",
+    "    # target_cols=['T1']\n",
     "    n_fold=4\n",
     "    trn_fold=[0, 1, 2]\n",
     "    train=True\n",
@@ -205,20 +217,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "folds = {'filename': [], 'label': []}\n",
-    "for filename in os.listdir(TRAIN_PATH + 'yes/'):\n",
-    "  folds['filename'].append(filename)\n",
-    "  folds['label'].append(1)\n",
-    "for filename in os.listdir(TRAIN_PATH + 'no/'):\n",
-    "  folds['filename'].append(filename)\n",
-    "  folds['label'].append(0)\n",
-    "\n",
-    "folds = pd.DataFrame(folds)\n",
-    "Fold = GroupKFold(n_splits=CFG.n_fold)\n",
-    "groups = folds['filename'].values\n",
-    "for n, (train_index, val_index) in enumerate(Fold.split(folds, folds[CFG.target_cols], groups)):\n",
-    "  folds.loc[val_index, 'fold'] = int(n)\n",
-    "folds['fold'] = folds['fold'].astype(int)\n",
+    "folds = train.copy()\n",
+    "# Fold = GroupKFold(n_splits=CFG.n_fold)\n",
+    "# groups = folds['filename'].values\n",
+    "# for n, (train_index, val_index) in enumerate(Fold.split(folds, folds[CFG.target_cols], groups)):\n",
+    "#   folds.loc[val_index, 'fold'] = int(n)\n",
+    "# folds['fold'] = folds['fold'].astype(int)\n",
     "display(folds.groupby('fold').size())\n",
     "display(folds)"
    ]
@@ -236,7 +240,7 @@
     "    def __init__(self, df, transform=None):\n",
     "        self.df = df\n",
     "        self.file_names = df['filename'].values\n",
-    "        self.labels = df['label'].values\n",
+    "        self.labels = df[CFG.target_cols].values\n",
     "        self.transform = transform\n",
     "        \n",
     "    def __len__(self):\n",
@@ -244,14 +248,14 @@
     "\n",
     "    def __getitem__(self, idx):\n",
     "        file_name = self.file_names[idx]\n",
-    "        label = torch.tensor([self.labels[idx]]).float()\n",
-    "        if(label.item() == 1):\n",
-    "          image = cv2.imread(TRAIN_PATH + 'yes/' + file_name)\n",
-    "          # label = np.array([1]).astype(np.float)\n",
-    "        else:\n",
-    "          image = cv2.imread(TRAIN_PATH + 'no/' + file_name)\n",
-    "          # label = np.array([0]).astype(np.float)\n",
-    "          \n",
+    "        label = torch.tensor(self.labels[idx]).float()\n",
+    "        # if(label[0].item() == 1):\n",
+    "        #   image = cv2.imread(TRAIN_PATH + 'yes/' + file_name)\n",
+    "        #   # label = np.array([1]).astype(np.float)\n",
+    "        # else:\n",
+    "        #   image = cv2.imread(TRAIN_PATH + 'no/' + file_name)\n",
+    "        #   # label = np.array([0]).astype(np.float)\n",
+    "        image = cv2.imread(TRAIN_PATH + 'train/' + file_name)\n",
     "        image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
     "        if self.transform:\n",
     "            augmented = self.transform(image=image)\n",
