--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -809,6 +809,7 @@
    ],
    "source": [
     "\n",
+    "# 打乱 T1\n",
     "folds = pd.read_csv('../input/RealTrain/data.csv')\n",
     "T1_idx = 2\n",
     "T1 = folds['T1'].values\n",
@@ -975,6 +976,7 @@
     }
    ],
    "source": [
+    "# 打乱 tumor\n",
     "folds = pd.read_csv('../input/RealTrain/data.csv')\n",
     "T1_idx = 2\n",
     "tumor = folds['label'].values\n",
